--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -1,3 +1,9 @@
+
+article {
+	max-width: 1000px;
+	padding: 10px;
+	text-align: center;
+}
 ul.topnav {
     list-style-type: none;
     margin: 0;
@@ -16,12 +22,9 @@ ul.topnav li a {
     transition: 0.3s;
     font-size: 14px;
 }
-ul.topnav li a:hover {background-color: Salmon}
-
-article {
-	max-width: 1000px;
-	padding: 10px;
-	text-align: center;
+ul.topnav li a:hover {background-color: Salmon;}
+.imgage {
+	align-items: auto
 }
 h1 {
 	text-align: center;	
